# ripgrep

./: Cargo.toml
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs  metadata.rs  provider.rs  region.rs  value.rs
crates/printer/: Cargo.toml
crates/printer/src/hyperlink/: mod.rs
crates/searcher/: Cargo.toml
crates/searcher/src/: lib.rs  sink.rs
crates/searcher/src/searcher/: meta.rs  mod.rs
crates/searcher/tests/: metadata.rs
